[package]
name = "miniconf-pest-parser"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "PEG (pest) parser for the MiniConf configuration format with sections and key=value values."

[lib]
name = "miniconf_pest_parser"
path = "src/lib.rs"

[dependencies]
pest = "2.8.3"
pest_derive = "2.8.3"
thiserror = "1"
