[package]
name = "miniconf-parser"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Pest-powered parser and CLI for the MiniConf configuration format."
readme = "README.md"
homepage = "https://github.com/kit/miniconf-parser"
repository = "https://github.com/kit/miniconf-parser"
documentation = "https://docs.rs/miniconf-parser"
categories = ["config", "parser-implementations"]
keywords = ["parser", "config", "pest"]

[lib]
name = "miniconf_parser"
path = "src/lib.rs"

[[bin]]
name = "miniconf-parser"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
pest = "2.8.3"
pest_derive = "2.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[package.metadata.docs.rs]
all-features = true
